--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,30 @@
 {%extends 'base.html'%}
 
 {%block content%}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
+	<div class="container d-flex align-items-center">
+		<a class="navbar-brand" href="{%url 'home'%}">Kiddos</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="oi oi-menu"></span> Menu
+	  </button>
+	  <!-- <p class="button-custom order-lg-last mb-0"><a href="appointment.html" class="btn btn-secondary py-2 px-3">Make An Appointment</a></p> -->
+	  <div class="collapse navbar-collapse" id="ftco-nav">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item active"><a href="{%url 'home'%}" class="nav-link pl-0">Home</a></li>
+			<li class="nav-item"><a href="{%url 'about'%}" class="nav-link">About</a></li>
+			<li class="nav-item"><a href="{%url 'teacher'%}" class="nav-link">Teacher</a></li>
+			<li class="nav-item"><a href="{%url 'courses'%}" class="nav-link">Courses</a></li>
+			<li class="nav-item"><a href="{%url 'pricing'%}" class="nav-link">Pricing</a></li>
+			<li class="nav-item"><a href="{%url 'blog'%}" class="nav-link">Blog</a></li>
+		  <li class="nav-item"><a href="{%url 'contact'%}" class="nav-link">Contact</a></li>
+		</ul>
+	  </div>
+	</div>
+</nav>
+
 <section class="home-slider owl-carousel">
-      <div class="slider-item" style="background-image:url(images/bg_1.jpg);">
+      <div class="slider-item" style="background-image: url(/static/images/bg_1.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -14,7 +36,7 @@
         </div>
       </div>
 
-      <div class="slider-item" style="background-image:url(images/bg_2.jpg);">
+      <div class="slider-item" style="background-image: url(/static/images/bg_2.jpg);">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -153,7 +175,7 @@
 			</div>
 		</section>
 		
-		<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+		<section class="ftco-intro" style="background-image: url(/static/images/bg_3.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -162,7 +184,7 @@
 						<p class="mb-0">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 					</div>
 					<div class="col-md-3 d-flex align-items-center">
-						<p class="mb-0"><a href="#" class="btn btn-secondary px-4 py-3">Take a Course</a></p>
+						<p class="mb-0"><a href="{%url 'courses'%}" class="btn btn-secondary px-4 py-3">Take a Course</a></p>
 					</div>
 				</div>
 			</div>
@@ -181,7 +203,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-1.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-1.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Bianca Wilson</h3>
@@ -201,7 +223,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-2.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-2.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Mitch Parker</h3>
@@ -221,7 +243,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-3.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-3.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Stella Smith</h3>
@@ -241,7 +263,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-4.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-4.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Monshe Henderson</h3>
@@ -272,7 +294,7 @@
         </div>	
 				<div class="row">
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-1.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-1.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Arts Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -280,7 +302,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-2.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-2.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Language Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -288,7 +310,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-3.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-3.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Music Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -296,7 +318,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-4.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-4.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Sports Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -307,7 +329,7 @@
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_4.jpg);" data-stellar-background-ratio="0.5">
+		<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(/static/images/bg_4.jpg);" data-stellar-background-ratio="0.5">
     	<div class="container">
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-8 text-center heading-section heading-section-black ftco-animate">
@@ -373,7 +395,7 @@
             <div class="carousel-testimony owl-carousel">
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(/static/images/teacher-1.jpg)">
                   </div>
                   <div class="text ml-2 bg-light">
                   	<span class="quote d-flex align-items-center justify-content-center">
@@ -387,7 +409,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-2.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(/static/images/teacher-2.jpg)">
                   </div>
                   <div class="text ml-2 bg-light">
                   	<span class="quote d-flex align-items-center justify-content-center">
@@ -401,7 +423,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-3.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(/static/images/teacher-3.jpg)">
                   </div>
                   <div class="text ml-2 bg-light">
                   	<span class="quote d-flex align-items-center justify-content-center">
@@ -415,7 +437,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-4.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(/static/images/teacher-4.jpg)">
                   </div>
                   <div class="text ml-2 bg-light">
                   	<span class="quote d-flex align-items-center justify-content-center">
@@ -429,7 +451,7 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap d-flex">
-                  <div class="user-img mr-4" style="background-image: url(images/teacher-1.jpg)">
+                  <div class="user-img mr-4" style="background-image: url(/static/images/teacher-1.jpg)">
                   </div>
                   <div class="text ml-2 bg-light">
                   	<span class="quote d-flex align-items-center justify-content-center">
@@ -447,7 +469,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-consult ftco-no-pt ftco-no-pb" style="background-image: url(images/bg_5.jpg);" data-stellar-background-ratio="0.5">
+    <section class="ftco-section ftco-consult ftco-no-pt ftco-no-pb" style="background-image: url(/static/images/bg_5.jpg);" data-stellar-background-ratio="0.5">
     	<div class="container">
     		<div class="row justify-content-end">
     			<div class="col-md-6 py-5 px-md-5 bg-primary">
@@ -513,7 +535,7 @@
 	        			<h3 class="mb-3">Basic</h3>
 	        			<p><span class="price">$24.50</span> <span class="per">/ 5mos</span></p>
 	        		</div>
-	        		<div class="img" style="background-image: url(images/bg_1.jpg);"></div>
+	        		<div class="img" style="background-image: url(/static/images/bg_1.jpg);"></div>
 	        		<div class="px-4">
 	        			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
         			</div>
@@ -526,7 +548,7 @@
 	        			<h3 class="mb-3">Standard</h3>
 	        			<p><span class="price">$34.50</span> <span class="per">/ 5mos</span></p>
 	        		</div>
-	        		<div class="img" style="background-image: url(images/bg_2.jpg);"></div>
+	        		<div class="img" style="background-image: url(/static/images/bg_2.jpg);"></div>
         			<div class="px-4">
 	        			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
         			</div>
@@ -539,7 +561,7 @@
 	        			<h3 class="mb-3">Premium</h3>
 	        			<p><span class="price">$54.50</span> <span class="per">/ 5mos</span></p>
 	        		</div>
-	        		<div class="img" style="background-image: url(images/bg_3.jpg);"></div>
+	        		<div class="img" style="background-image: url(/static/images/bg_3.jpg);"></div>
         			<div class="px-4">
 	        			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
         			</div>
@@ -552,7 +574,7 @@
 	        			<h3 class="mb-3">Platinum</h3>
 	        			<p><span class="price">$89.50</span> <span class="per">/ 5mos</span></p>
 	        		</div>
-	        		<div class="img" style="background-image: url(images/bg_5.jpg);"></div>
+	        		<div class="img" style="background-image: url(/static/images/bg_5.jpg);"></div>
         			<div class="px-4">
 	        			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
         			</div>
@@ -574,7 +596,7 @@
 				<div class="row">
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_1.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url(/static/'images/image_1.jpg');">
 								<div class="meta-date text-center p-2">
                   <span class="day">27</span>
                   <span class="mos">January</span>
@@ -596,7 +618,7 @@
           </div>
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_2.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url(/static/'images/image_2.jpg');">
 								<div class="meta-date text-center p-2">
                   <span class="day">27</span>
                   <span class="mos">January</span>
@@ -618,7 +640,7 @@
           </div>
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url(/static/'images/image_3.jpg');">
 								<div class="meta-date text-center p-2">
                   <span class="day">27</span>
                   <span class="mos">January</span>
@@ -646,28 +668,28 @@
     	<div class="container-wrap">
     		<div class="row no-gutters">
 					<div class="col-md-3 ftco-animate">
-						<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/course-1.jpg);">
+						<a href="images/image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(/static/images/course-1.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_2.jpg);">
+						<a href="images/image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(/static/images/image_2.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_3.jpg);">
+						<a href="images/image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(/static/images/image_3.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
 						</a>
 					</div>
 					<div class="col-md-3 ftco-animate">
-						<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_4.jpg);">
+						<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(/static/images/image_4.jpg);">
 							<div class="icon mb-4 d-flex align-items-center justify-content-center">
     						<span class="icon-instagram"></span>
     					</div>
