--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Kidzee</title>
+    <title>Little Star Kidzee</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -34,7 +34,7 @@
 		    		<div class="row d-flex">
 			    		<div class="col-md-5 pr-4 d-flex topper align-items-center">
 			    			<div class="icon bg-fifth mr-2 d-flex justify-content-center align-items-center"><span class="icon-map"></span></div>
-						    <span class="text">198 West 21th Street, Suite 721 New York NY 10016</span>
+						    <span class="text">Kokar Chunna Bhatta Street, Near Dislari pool Ranchi 834001</span>
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon bg-secondary mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
@@ -42,33 +42,14 @@
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon bg-tertiary mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-						    <span class="text">+ 1235 2355 98</span>
+						    <span class="text">+ 1234 5678 90</span>
 					    </div>
 				    </div>
 			    </div>
 		    </div>
 		  </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
-	    <div class="container d-flex align-items-center">
-	    	<a class="navbar-brand" href="{%url 'home'%}">Kiddos</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
-	      <!-- <p class="button-custom order-lg-last mb-0"><a href="appointment.html" class="btn btn-secondary py-2 px-3">Make An Appointment</a></p> -->
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item"><a href="{%url 'home'%}" class="nav-link pl-0">Home</a></li>
-	        	<li class="nav-item active"><a href="{%url 'about'%}" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="{%url 'teacher'%}" class="nav-link">Teacher</a></li>
-	        	<li class="nav-item"><a href="{%url 'courses'%}" class="nav-link">Courses</a></li>
-	        	<li class="nav-item"><a href="{%url 'pricing'%}" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="{%url 'blog'%}" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="{%url 'contact'%}" class="nav-link">Contact</a></li>
-	        </ul>
-	      </div>
-	    </div>
-    </nav>
+    
   </header>
     <!-- END nav -->
 <body>
@@ -84,7 +65,7 @@
               <h2 class="ftco-heading-2">Have a Questions?</h2>
               <div class="block-23 mb-3">
                 <ul>
-                  <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+                  <li><span class="icon icon-map-marker"></span><span class="text">Kokar Chunna Bhatta Street, Near Dislari pool, Ranchi ,JHARKHAND 834001</span></li>
                   <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
                   <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
                 </ul>
@@ -95,7 +76,7 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Recent Blog</h2>
             <div class="block-21 mb-4 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(/static/images/image_1.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -106,7 +87,7 @@
               </div>
             </div>
             <div class="block-21 mb-5 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(/static/images/image_2.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -122,11 +103,11 @@
           <div class="ftco-footer-widget mb-5 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-              <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
+              <li><a href="{%url 'home'%}"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+              <li><a href="{%url 'about'%}"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
+              <li><a href="{%url 'home'%}"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <li><a href="{%url 'home'%}"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
+              <li><a href="{%url 'contact'%}"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
           </div>
         </div>
