--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,29 @@
 {%extends 'base.html'%}
 {%load static%}
-{%block content%}    
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
+{%block content%}   
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
+  <div class="container d-flex align-items-center">
+    <a class="navbar-brand" href="{%url 'home'%}">Kiddos</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="oi oi-menu"></span> Menu
+    </button>
+    <!-- <p class="button-custom order-lg-last mb-0"><a href="appointment.html" class="btn btn-secondary py-2 px-3">Make An Appointment</a></p> -->
+    <div class="collapse navbar-collapse" id="ftco-nav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a href="{%url 'home'%}" class="nav-link pl-0">Home</a></li>
+        <li class="nav-item"><a href="{%url 'about'%}" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="{%url 'teacher'%}" class="nav-link">Teacher</a></li>
+        <li class="nav-item"><a href="{%url 'courses'%}" class="nav-link">Courses</a></li>
+        <li class="nav-item"><a href="{%url 'pricing'%}" class="nav-link">Pricing</a></li>
+        <li class="nav-item"><a href="{%url 'blog'%}" class="nav-link">Blog</a></li>
+        <li class="nav-item active"><a href="{%url 'contact'%}" class="nav-link">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('/static/images/bg_2.jpg');">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -19,7 +41,7 @@
           <div class="col-md-3 d-flex">
           	<div class="bg-light align-self-stretch box p-4 text-center">
           		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+	            <p>Kokar Chunna Bhatta Street, Near Dislari pool, Ranchi ,JHARKHAND 834001</p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
