--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,8 +1,29 @@
 {%extends 'base.html'%}	 
 {%load static%}
 {%block content%}	 
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
+	<div class="container d-flex align-items-center">
+		<a class="navbar-brand" href="{%url 'home'%}">Kiddos</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="oi oi-menu"></span> Menu
+	  </button>
+	  <!-- <p class="button-custom order-lg-last mb-0"><a href="appointment.html" class="btn btn-secondary py-2 px-3">Make An Appointment</a></p> -->
+	  <div class="collapse navbar-collapse" id="ftco-nav">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item"><a href="{%url 'home'%}" class="nav-link pl-0">Home</a></li>
+			<li class="nav-item"><a href="{%url 'about'%}" class="nav-link">About</a></li>
+			<li class="nav-item"><a href="{%url 'teacher'%}" class="nav-link">Teacher</a></li>
+			<li class="nav-item active"><a href="{%url 'courses'%}" class="nav-link">Courses</a></li>
+			<li class="nav-item"><a href="{%url 'pricing'%}" class="nav-link">Pricing</a></li>
+			<li class="nav-item"><a href="{%url 'blog'%}" class="nav-link">Blog</a></li>
+		  <li class="nav-item"><a href="{%url 'contact'%}" class="nav-link">Contact</a></li>
+		</ul>
+	  </div>
+	</div>
+</nav>
    
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url(/static/images/bg_2.jpg);">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -18,7 +39,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-1.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-1.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Arts Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -26,7 +47,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-2.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-2.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Language Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -34,7 +55,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-3.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-3.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Music Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -42,7 +63,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-4.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-4.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Sports Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -50,7 +71,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-5.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-5.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Study Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
@@ -58,7 +79,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 course d-lg-flex ftco-animate">
-						<div class="img" style="background-image: url(images/course-6.jpg);"></div>
+						<div class="img" style="background-image: url(/static/images/course-6.jpg);"></div>
 						<div class="text bg-light p-4">
 							<h3><a href="#">Experiment Lesson</a></h3>
 							<p class="subheading"><span>Class time:</span> 9:00am - 10am</p>
