--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -3,7 +3,28 @@
 
 {%block content%}	 
 	 
-	 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
+	<div class="container d-flex align-items-center">
+		<a class="navbar-brand" href="{%url 'home'%}">Kiddos</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="oi oi-menu"></span> Menu
+	  </button>
+	  <!-- <p class="button-custom order-lg-last mb-0"><a href="appointment.html" class="btn btn-secondary py-2 px-3">Make An Appointment</a></p> -->
+	  <div class="collapse navbar-collapse" id="ftco-nav">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item"><a href="{%url 'home'%}" class="nav-link pl-0">Home</a></li>
+			<li class="nav-item"><a href="{%url 'about'%}" class="nav-link">About</a></li>
+			<li class="nav-item active"><a href="{%url 'teacher'%}" class="nav-link">Teacher</a></li>
+			<li class="nav-item"><a href="{%url 'courses'%}" class="nav-link">Courses</a></li>
+			<li class="nav-item"><a href="{%url 'pricing'%}" class="nav-link">Pricing</a></li>
+			<li class="nav-item"><a href="{%url 'blog'%}" class="nav-link">Blog</a></li>
+		  <li class="nav-item"><a href="{%url 'contact'%}" class="nav-link">Contact</a></li>
+		</ul>
+	  </div>
+	</div>
+</nav>
+
+	 <section class="hero-wrap hero-wrap-2" style="background-image: url(/static/images/bg_2.jpg);">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -21,7 +42,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-1.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-1.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Bianca Wilson</h3>
@@ -41,7 +62,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-2.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-2.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Mitch Parker</h3>
@@ -61,7 +82,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-3.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-3.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Stella Smith</h3>
@@ -81,7 +102,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-4.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-4.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Monshe Henderson</h3>
@@ -101,7 +122,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-5.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-5.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Daniel Tribor</h3>
@@ -121,7 +142,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-6.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-6.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Mitch Parker</h3>
@@ -141,7 +162,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-7.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-7.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Stella Smith</h3>
@@ -161,7 +182,7 @@
 					<div class="col-md-6 col-lg-3 ftco-animate">
 						<div class="staff">
 							<div class="img-wrap d-flex align-items-stretch">
-								<div class="img align-self-stretch" style="background-image: url(images/teacher-8.jpg);"></div>
+								<div class="img align-self-stretch" style="background-image: url(/static/images/teacher-8.jpg);"></div>
 							</div>
 							<div class="text pt-3 text-center">
 								<h3>Monshe Henderson</h3>
